fixed nav bar spacing, because it  looked ugly before

--- a/frontend/src/Navbar.module.css
+++ b/frontend/src/Navbar.module.css
@@ -1,54 +1,22 @@
 :global(.MuiBox-root.css-0 > .MuiBox-root.css-whu3bg) {
   display: none !important;
 }
-/* 
-.navbar-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 270px;
-    /* transform: translate(-100%); *
-    transition: transform 0.3s ease-in-out;
-    z-index: 999; /* on top *
-    background-color: white;
-    border:1px solid red;
-    box-sizing: border-box;
-    padding-top: .5rem;
-}
-  
-.navbar-container.open {
-    transform: translate(0%);
-} */
 .navbar-container {
     display:flex;
     background-color: white;
     filter: brightness(100%);
-    /* margin:0;
-    padding:0; */
-    /* width:fit-content; */
-    /* height: fit-content; */
-    /* border:1px solid blue; */
-}
-.icon {
-
-    /* transform: translateX(5px);
-    width:fit-content;
-    height: auto; */
 }
 .drawer {
-    padding:5rem;
-    /* filter: brightness(100%); */
+    min-width: none;
 }
 .menu-icon {
-    /* border:1px solid red; */
     position: relative;
-    width: 300px;
-    margin-top: 2rem;
+    /* width: 300px; */
+    min-width: none;
+    padding:1rem;
     transform: translateX(5px);
-    /* border:1px solid blue; */
-    margin-bottom: 1rem;
     align-items: center;
+    /* border:1px solid red; */
 }
 .menu-icon a {
     position: absolute;
@@ -57,34 +25,45 @@
     transform: translate(-50%, -50%);
     width: fit-content;
     /* border:1px solid red; */
-    font-size: 42px;
+    font-size: 26px;
     font-weight: 600;
     color:black;
     text-decoration: none;
 }
 .list-items a {
     color:black;
-    font-size: 18px;
+    font-size: 14px;
     padding:4px 2rem;
 }
 .list-items span {
-    font-size: 18px;
+    font-size: 16px;
     /* border:1px solid red; */
 }
 .list-items p {
-    padding-top:1rem;
-    margin:1.25rem 2rem 0.25rem 2rem;
+    margin:0rem 2rem 0.25rem 2rem;
     font-size: 14px;
-    border-top: 1px solid #cccccc;
     font-weight: 500;
 }
+.list-items p:not(:first-child) {
+    padding-top:1rem;
+    margin-top:1.25rem;
+    border-top: 1px solid #cccccc;
+}
 
+.list-icons {
+    min-width: 25px !important;
+  }
+  
+.list-icons svg {
+    padding: 0;
+    margin: 0;
+    /* border:1px solid red; */
+}
 .menuItem {
     font-family: 'Inter', sans-serif;
     font-size: 1rem;
     /* padding: 12px 16px; */
     border-radius: 8px;
-    /* margin: 4px 0; */
     transition: background 0.3s ease;
     color: #333;
   }
